pseudocoding and html css created

--- a/index.html
+++ b/index.html
@@ -2,19 +2,23 @@
 <html>
 
 <head>
-<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Amatic+SC:400,700|Lobster|Lobster+Two' rel='stylesheet' type='text/css'>
     <title>Maze</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js" charset="utf-8"></script>
+    <script src='script.js'></script>
 </head>
 
 <body>
     <header>
+        <h1>Maze Game</h1>
     </header>
     <nav>
     </nav>
     <section>
         <div>
             <canvas>
-            hdehjgfwej;q
+                GAME ISNT WORKING
             </canvas>
         </div>
     </section>
