complete change in games

--- a/index.html
+++ b/index.html
@@ -15,15 +15,12 @@
     </header>
     <nav>
     </nav>
-    <section>
-        <div>
-            <canvas>
-                GAME ISNT WORKING
-            </canvas>
-        </div>
-    </section>
-    <aside>
-    </aside>
+    <div id='stacker-rep'>
+
+    </div>
+    <div id='static-stacker'>
+
+    </div>
     <footer>
     </footer>
 </body>
