changes html, css and began stacker

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Maze Game</h1>
+        <h1>Stacker</h1>
     </header>
     <nav>
     </nav>
@@ -19,6 +19,9 @@
 
     </div>
     <div id='static-stacker'>
+
+    </div>
+    <div id='platform'>
 
     </div>
     <footer>
