started writing out functions

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     </header>
     <nav>
     </nav>
-    <div id='stacker-rep'>
 
-    </div>
-    <div id='static-stacker'>
+    <div id='stacker'>
 
     </div>
     <div id='platform'>
