made function to move div constantly

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Amatic+SC:400,700|Lobster|Lobster+Two' rel='stylesheet' type='text/css'>
     <title>Maze</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src='script.js'></script>
 </head>
 
@@ -15,12 +15,9 @@
     </header>
     <nav>
     </nav>
-
-    <div id='stacker'>
-
+    <div class='stacker'>
     </div>
     <div id='platform'>
-
     </div>
     <footer>
     </footer>
