got the second level to work

--- a/index.html
+++ b/index.html
@@ -15,7 +15,31 @@
     </header>
     <nav>
     </nav>
-    <div class='stacker'>
+    <div class='holdbox'>
+        <div class='tester right' data-count="0">
+        </div>
+        <div class='tester1 right' data-count="0">
+        </div>
+        <div class='tester2 right' data-count="0">
+        </div>
+        <div class='tester3 right' data-count="0">
+        </div>
+        <div class='tester4 right' data-count="0">
+        </div>
+        <div class='tester5 right' data-count="0">
+        </div>
+        <div class='tester6 right' data-count="0">
+        </div>
+        <div class='tester7 right' data-count="0">
+        </div>
+        <div class='tester8 right' data-count="0">
+        </div>
+        <div class='tester9 right' data-count="0">
+        </div>
+        <div class='tester10 right' data-count="0">
+        </div>
+        <div class='stacker right' data-count="0">
+        </div>
     </div>
     <div id='platform'>
     </div>
