made landing page

--- a/index.html
+++ b/index.html
@@ -11,32 +11,32 @@
 
 <body>
     <header>
-        <h1>Stacker</h1>
+        <a href='landingpage.html'><h1>Stacker</h1></a>
     </header>
     <nav>
     </nav>
     <div class='holdbox'>
         <div class='tester right' data-count="0">
         </div>
-        <div class='tester1 right' data-count="0">
+        <div class='tester1 1 right' data-count="0">
         </div>
-        <div class='tester2 right' data-count="0">
+        <div class='tester2 2 right' data-count="0">
         </div>
-        <div class='tester3 right' data-count="0">
+        <div class='tester3 3 right' data-count="0">
         </div>
-        <div class='tester4 right' data-count="0">
+        <div class='tester4 4 right' data-count="0">
         </div>
-        <div class='tester5 right' data-count="0">
+        <div class='tester5 5 right' data-count="0">
         </div>
-        <div class='tester6 right' data-count="0">
+        <div class='tester6 6 right' data-count="0">
         </div>
-        <div class='tester7 right' data-count="0">
+        <div class='tester7 7 right' data-count="0">
         </div>
-        <div class='tester8 right' data-count="0">
+        <div class='tester8 8 right' data-count="0">
         </div>
-        <div class='tester9 right' data-count="0">
+        <div class='tester9 9 right' data-count="0">
         </div>
-        <div class='tester10 right' data-count="0">
+        <div class='tester10 10 right' data-count="0">
         </div>
         <div class='stacker right' data-count="0">
         </div>
