still not working

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Maze</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src='script.js'></script>
-<!--     <script src="script2.js"></script>
- --></head>
+    <script src='app.js'></script>
+    <!--     <script src="script2.js"></script>
+ -->
+</head>
 
 <body>
     <header>
@@ -21,7 +23,6 @@
     <nav>
     </nav>
     <div class='holdbox'>
-
         <div class='tester1 right' data-count="0">
         </div>
         <div class='tester2 right' data-count="0">
@@ -48,6 +49,8 @@
         </div>
     </div>
     <div id='platform'>
+    <p>Instructions: Press spacebar to stack your bars!
+    <button class="colors">Switch Colors</button></p>
     </div>
     <footer>
     </footer>
