--- a/landingpage.html
+++ b/landingpage.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style2.css">
     <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Amatic+SC:400,700|Lobster|Lobster+Two' rel='stylesheet' type='text/css'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-    <script src="script2.js"></script>
+            <script src='app.js'></script>
+
 </head>
 
 <body>
