--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class='tester11 right' data-count="0">
         </div>
-        <div class='stacker right' data-count="0">
+        <div class='tester12 right' data-count="0">
         </div>
     </div>
     <div id='platform'>
